[package]
name = "nebulosa"
version = "0.1.0"
edition = "2021"
description = "The complete integrated solution for all of your astronomical imaging needs."
authors = ["Tiago Melo <tiago.henrique.cco@gmail.com>"]
repository = "https://github.com/tiagohm/nebulosa.rust"
license = "MIT"
keywords = ["astronomy"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
googletest = "0.11.0"
